# basic-cfd3

./: .gitignore  CMakeLists.txt  README.md  plot.ipynb  run_all.ps1  run_all.sh
include/cfd/: boundary_conditions.hpp  cfd.hpp  euler_equation_simulator_1d.hpp  flux_calculators.hpp  flux_solvers.hpp  functions.hpp  problem_parameters.hpp  riemann_solvers.hpp  slope_limiters.hpp  spacial_reconstruction_schemes.hpp  text_file_writer.hpp  time_integration_schemes.hpp  timestep_length_calculator.hpp  variables.hpp
simulators/: problem_settings.hpp  simulator_exact.cpp  simulator_lax_wendroff.cpp  simulator_roe_1st_order.cpp  simulator_roe_tvd_minmod.cpp  simulator_roe_tvd_vanleer.cpp  simulator_sw_1st_order.cpp  simulator_sw_tvd_minmod.cpp  simulator_sw_tvd_vanleer.cpp
src/: boundary_conditions.cpp  riemann_solvers.cpp  spacial_reconstruction_schemes.cpp  text_file_writer.cpp  time_integration_schemes.cpp  variables.cpp
